# BJCM

./: .gitignore  Cargo.toml
Strategy/BasicStrategy/: hard.txt  soft.txt  split.txt
blackjack_calculator/: Cargo.toml
blackjack_calculator/src/: app.rs  lib.rs  main.rs
blackjack_calculator/src/app/: activator.rs  asset_manager.rs  buy_window.rs  config.rs  table_state.rs  total_ev_handler.rs
blackjack_calculator/src/app/config/: general_setting.rs  key_setting.rs  key_setting_window.rs  rule_setting_window.rs  texts.rs
blackjack_calculator/src/app/config/general_setting/: texts.rs
blackjack_calculator/src/app/table_state/: draw.rs  phand_with_result.rs  selected.rs
card_images/: プレゼンテーション1.pptx
data/description/: description.html  style.css
description/: description.html
efficiency_calc/: Cargo.toml
efficiency_calc/src/: main.rs
src/: black_jack.rs  main.rs
src/black_jack/: card.rs  deck.rs  hand.rs  rule.rs  strategy.rs
src/black_jack/strategy/: basic_strategy.rs
utility/: Cargo.toml
utility/src/: lib.rs
