[package]
name = "blackjack_calculator"
default-run = "blackjack_calculator_bin"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "blackjack_calculator_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.18.0"
eframe = { version = "0.18.0", features = ["persistence"] }
serde = { version = "1.0", features = ["derive"] } # You only need this if you want app persistence

blackjack_lib = {path = "../blackjack_lib"}
io_util = {path = "../io_util"}
code_gen_lib = {path = "../code_gen_lib"}

image = "0.24.2"
bincode = "1.3"
once_cell = "1.10.0"
strum = "0.24.1"
strum_macros = "0.24"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/egui" }
# eframe = { path = "../egui/eframe" }