[package]
name = "blackjack_calculator"
default-run = "blackjack_calculator_bin"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "blackjack_calculator_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.26.0"
eframe = { version = "0.26.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
serde = { version = "*", features = ["derive"] } # You only need this if you want app persistence

blackjack_lib = {version = "2.1.3", git = "ssh://git@github.com/nagisakuya/BlackjackLib.git"}
io_util = {git = "ssh://git@github.com/nagisakuya/IoUtility-rust.git"}
code_gen_lib = {version = "0.1.1", git = "ssh://git@github.com/nagisakuya/BJCMprivate.git", branch="master"}

image = "*"
bincode = "*"
once_cell = "*"
strum = "*"
strum_macros = "*"
futures = "0.3.30"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/egui" }
# eframe = { path = "../egui/eframe" }